--- a/assets/sass/wedocs/components/_single-doc.scss
+++ b/assets/sass/wedocs/components/_single-doc.scss
@@ -15,12 +15,19 @@
 			-ms-flex: 0 0 66.666667%;
     		flex: 0 0 66.666667%;
 			max-width: 66.666667%;
+			/*-ms-flex: 0 0 75%;
+    		flex: 0 0 75%;
+			max-width: 75%;*/
+			border-right: 1px solid #edf6fc;
 		}
 
 		.sidebar {
 			-ms-flex: 0 0 33.333333%;
     		flex: 0 0 33.333333%;
     		max-width: 33.333333%;
+    		/*-ms-flex: 0 0 25%;
+    		flex: 0 0 25%;
+    		max-width: 25%;*/
 		}
 	}
 
