--- a/assets/sass/wedocs/wedocs.scss
+++ b/assets/sass/wedocs/wedocs.scss
@@ -4,7 +4,9 @@
 @import "components/single-doc";
 @import "components/anchorjs";
 @import "components/table-of-contents";
+@import "components/sibling-navigation";
 @import "components/heading-search";
+@import "components/doc-nav";
 
 @import "blocks/footer";
 @import "blocks/masdocs-featured";
