--- a/assets/sass/wedocs/components/_sibling-navigation.scss
+++ b/assets/sass/wedocs/components/_sibling-navigation.scss
@@ -1,28 +1,51 @@
 .sibling-navigation {
 	margin-bottom: 2em;
 
+	> ul {
+		padding-left: 0;
+		list-style: none;
+		margin-bottom: 0;
+	}
+
 	h4 {
-		margin-bottom: 1.2em;
+		margin-bottom: 10px;
 	}
 
 	.list-sibling-pages {
-		margin-left: -15px;
-		> li {
+		position: relative;
+		margin-left: 5px;
 
+		&:after {
+			border-left: 1px solid #ddd;
+			position: absolute;
+			height: 100%;
+			content: ' ';
+			top: 0;
+		}
+
+		> li {
+			margin-left: 15px;
+			position: relative;
+			
+			&:after {
+				content: ' ';
+				position: absolute;
+				border-bottom: 1px solid #ddd;
+				top: 50%;
+				width: 10px;
+				margin-left: -15px;
+			}
+			
 			a {
 				display: block;
 				font-size: 14px;
-				padding: 10px 15px;
-				border-bottom: 1px solid #edf6fc;
-				border-top: 1px solid #edf6fc;
-				margin-top: -1px;
 				font-weight: 500;
+				padding: 6px 0;
 			}
 
 			&.current_page_item {
 				a {
 					color: #212529;
-					background-color: #f8f9fa;
 				}
 			}
 		}
