--- a/assets/sass/site/_site.scss
+++ b/assets/sass/site/_site.scss
@@ -10,4 +10,5 @@
 --------------------------------------------------------------*/
 @import "primary/comments";
 
+@import "site-content";
 @import "site-footer";
