--- a/assets/sass/typography/_typography.scss
+++ b/assets/sass/typography/_typography.scss
@@ -1,6 +1,8 @@
 body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+    font-family: 'Montserrat', sans-serif;
+    line-height: 1.75em;
 }
 
 @import "headings";
