--- a/assets/sass/site/_site-content.scss
+++ b/assets/sass/site/_site-content.scss
@@ -1,3 +1,18 @@
+.content-area {
+    padding-top: 1.75em;
+    padding-bottom: 4.5em;
+    background-color: #fff;
+}
+
+.site-content {
+    background-color: #f5f7f9;
+}
+
+.sidebar-area {
+    padding-top: 1.75em;
+    padding-bottom: 4.5em;
+}
+
 .entry-title {
     margin-top: 0;
 }
