--- a/assets/sass/site/_layout.scss
+++ b/assets/sass/site/_layout.scss
@@ -9,3 +9,33 @@
         max-width: 1200px;
     }
 }
+
+@include media-breakpoint-up(md) {
+    .site-content-inner {
+        @include make-row();
+
+        .content-area, .sidebar-area {
+            @include make-col-ready();
+        }
+
+        .content-area {
+            -ms-flex-preferred-size: 0;
+            flex-basis: 0;
+            -webkit-box-flex: 1;
+            -ms-flex-positive: 1;
+            flex-grow: 1;
+            max-width: 100%;
+            order: 1;
+        }
+
+        .sidebar-area {
+            @include make-col(3);
+            max-width: 300px;
+            order: 0;
+        }
+    }
+
+    .site-main {
+        margin: 0 88px;
+    }
+}
