--- a/assets/sass/site/_sidebar-docs.scss
+++ b/assets/sass/site/_sidebar-docs.scss
@@ -4,8 +4,9 @@
     a {
         color: #242A31;
         display: block;
-        padding: 5px 0;
+        padding: 8.5px 0;
         font-size: 14px;
+        line-height: 21px;
     }
 
     ul.children {
@@ -23,6 +24,6 @@
     }
 
     .child-indicator::after {
-        
+
     }
 }
