--- a/assets/sass/site/_sidebar-docs.scss
+++ b/assets/sass/site/_sidebar-docs.scss
@@ -20,39 +20,56 @@
         }
     }
 
-    .child-indicator {
-        display: none;
+    > li.toggled {
+        > ul.children {
+            display: block;
+        }
     }
 
-    .page_item_has_children {
+    .child-indicator {
+        float: left;
+        display: inline-block;
+        margin-right: 15px;
+        padding: 0;
+        font-size: 12px;
+        line-height: 21px;
+        cursor: pointer;
+        color: #9BABB4;
+
         &::before {
             @include fa-icon();
             content: "\f054";
             font-family: 'Font Awesome 5 Free';
             font-weight: 900;
-            float: left;
-            display: inline-block;
-            margin-right: 15px;
-            padding: 8.5px 0;
-            font-size: 12px;
-            line-height: 21px;
-            cursor: pointer;
         }
     }
 
     .current_page_item, .current_page_ancestor {
-        ul.children {
+        > ul.children {
             display: block;
         }
 
-        &.page_item_has_children {
+        .child-indicator {
             &::before {
                 content: "\f078";
             }
         }
 
-        > a {
-            font-weight: 600;
+        &.toggled {
+            > ul.children {
+                display: none;
+            }
+
+            .child-indicator {
+                &::before {
+                    content: "\f054";
+                }
+            }
         }
+    }
+
+    .current_page_item > a {
+        color: #007bff !important;
+        font-weight: 500;
     }
 }
