--- a/assets/sass/site/_layout.scss
+++ b/assets/sass/site/_layout.scss
@@ -7,6 +7,8 @@
 
     .site-content-inner {
         @include make-row();
+        margin-left: 0;
+        margin-right: 0;
 
         .content-area, .sidebar-area {
             @include make-col-ready();
@@ -24,17 +26,38 @@
 
         .sidebar-area {
             @include make-col(3);
-            max-width: 300px;
+            max-width: 260px;
             order: 0;
         }
     }
 
-    .site-main {
+    .site-main-inner {
         margin: 0 88px;
     }
 
     .sidebar-area {
         margin-left: calc( ( 100% - 738px) / 2 );
+    }
+
+    .content-area-inner {
+        @include make-row();
+        padding-right: calc( ( ( 100% - 738px) / 2 ) - 32px );
+
+        .site-main {
+            @include make-col-ready();
+            -ms-flex-preferred-size: 0;
+            flex-basis: 0;
+            -webkit-box-flex: 1;
+            -ms-flex-positive: 1;
+            flex-grow: 1;
+            max-width: 100%;
+        }
+
+        .site-aside {
+            @include make-col-ready();
+            flex: 0 0 220px;
+            max-width: 220px;
+        }
     }
 }
 
@@ -42,24 +65,38 @@
     .sidebar-area {
         margin-left: calc( ( 100% - 962px) / 2 );
     }
+
+    .content-area-inner {
+        padding-right: calc( ( ( 100% - 962px ) / 2 ) - 32px );
+    }
 }
 
 @media (min-width: 1200px ) {
     .container {
         max-width: 1200px;
+        padding: 0;
     }
 
     .sidebar-area {
-        margin-left: calc( ( 100% - 1170px) / 2 );
+        margin-left: calc( ( 100% - 1200px) / 2 );
+    }
+
+    .content-area-inner {
+        padding-right: calc( ( ( 100% - 1200px ) / 2 ) - 32px );
     }
 }
 
 @media (min-width: 1400px ) {
     .container {
         max-width: 1400px;
+        padding: 0;
     }
 
     .sidebar-area {
-        margin-left: calc( ( 100% - 1370px) / 2 );
+        margin-left: calc( ( 100% - 1400px) / 2 );
+    }
+
+    .content-area-inner {
+        padding-right: calc( ( ( 100vw - 1400px ) / 2 ) - 32px );
     }
 }
