--- a/assets/sass/site/_sidebar-docs.scss
+++ b/assets/sass/site/_sidebar-docs.scss
@@ -1,6 +1,10 @@
 .doc-nav-list {
     @include list-unstyled();
-    margin-left: -10px;
+    margin-left: 7px;
+
+    li {
+        position: relative;
+    }
 
     a {
         color: #242A31;
@@ -8,28 +12,23 @@
         padding: 8.5px 0;
         font-size: 14px;
         line-height: 21px;
+        font-weight: 500;
     }
 
     ul.children {
         display: none;
         list-style: none;
-        padding-left: 30px;
+        padding-left: 15px;
 
         a {
             color: #9BABB4;
         }
     }
 
-    > li.toggled {
-        > ul.children {
-            display: block;
-        }
-    }
-
     .child-indicator {
-        float: left;
+        position: absolute;
+        left: -21px;
         display: inline-block;
-        margin-right: 15px;
         padding: 0;
         font-size: 12px;
         line-height: 21px;
@@ -44,26 +43,14 @@
         }
     }
 
-    .current_page_item, .current_page_ancestor {
+    li.toggled {
         > ul.children {
-            display: block;
+            display: block !important;
         }
 
-        .child-indicator {
+        > a .child-indicator {
             &::before {
                 content: "\f078";
-            }
-        }
-
-        &.toggled {
-            > ul.children {
-                display: none;
-            }
-
-            .child-indicator {
-                &::before {
-                    content: "\f054";
-                }
             }
         }
     }
