--- a/assets/sass/site/_site-header.scss
+++ b/assets/sass/site/_site-header.scss
@@ -1,6 +1,8 @@
 .masdocs-navbar {
     border-bottom: 1px solid #f1f1f1;
     box-shadow: 1px 2px 4px 0 rgba(0,0,0,.03);
+    background-color: #fff;
+    z-index: 2;
 
     .navbar-nav > .nav-item {
         margin: 0 10px;
