--- a/assets/sass/site/_site-content.scss
+++ b/assets/sass/site/_site-content.scss
@@ -21,6 +21,15 @@
     > *:first-child {
         margin-top: 0;
     }
+
+    img {
+        border: 1px solid #e6e6e6;
+        border-radius: 5px;
+        -webkit-box-shadow: 0 0 0 2px #f3f3f3;
+        -moz-box-shadow: 0 0 0 2px #f3f3f3;
+        box-shadow: 0 0 0 2px #f3f3f3;
+        padding: 5px;
+    }
 }
 
 .docs-subcategories, .wedocs-doc-sections {
