--- a/assets/sass/site/_site-content.scss
+++ b/assets/sass/site/_site-content.scss
@@ -117,4 +117,10 @@
     > li:nth-child(n+5) {
         display: none;
     }
+
+    &.toggled {
+        > li:nth-child(n+5) {
+            display: block;
+        }
+    }
 }
