--- a/assets/sass/site/_site-header.scss
+++ b/assets/sass/site/_site-header.scss
@@ -3,16 +3,64 @@
     box-shadow: 1px 2px 4px 0 rgba(0,0,0,.03);
     background-color: #fff;
     z-index: 2;
+    padding: 0;
 
     .navbar-nav > .nav-item {
         margin: 0 10px;
+
+        &.button {
+            display: flex;
+            align-items: center;
+        }
     }
 
     .navbar-brand {
         font-weight: 700;
+        color: #676767;
+
+        @include hover-focus() {
+            color: #000;
+        }
     }
 
-    .nav-link {
+    .nav-link:not(.btn) {
         font-weight: 500;
+        padding: 1em 0.5em;
+        color: #676767;
+
+        @include hover-focus() {
+            color: #007bff;
+        }
     }
+
+    .current-menu-item {
+        .nav-link:not(.btn) {
+            color: #007bff;
+        }
+    }
+}
+
+.dropdown-menu {
+    border-radius: 0;
+    border: none;
+    border-top: 2px solid #007bff;
+    box-shadow: 0px 10px 12px 0px rgba(0, 0, 0, 0.21);
+    transition: all 0.24s;
+}
+
+.dropdown-item {
+    font-size: 14px;
+    padding: .25em 1.5em;
+    font-weight: 500;
+    color: #676767;
+}
+
+.dropdown-toggle::after {
+    @include fa-icon();
+    content: "\f078";
+    font-family: 'Font Awesome 5 Free';
+    font-weight: 900;
+    border: none;
+    vertical-align: -.01em;
+    font-size: 12px;
 }
