--- a/assets/sass/site/_layout.scss
+++ b/assets/sass/site/_layout.scss
@@ -25,6 +25,10 @@
             flex: 0 0 270px;
             max-width: 270px;
             order: 0;
+            position: sticky;
+            position: -webkit-sticky;
+            top: 28px;
+            height: calc( 100vh - 28px );
         }
     }
 
@@ -57,6 +61,10 @@
             @include make-col-ready();
             flex: 0 0 220px;
             max-width: 220px;
+            position: sticky;
+            position: -webkit-sticky;
+            top: 28px;
+            height: calc( 100vh - 28px );
         }
     }
 }
