--- a/assets/sass/site/_type.scss
+++ b/assets/sass/site/_type.scss
@@ -12,7 +12,7 @@ h1, h2, h3, h4, h5, h6 {
     border-bottom: 1px solid #eaecef;
 }
 
-.entry-content {
+article.hentry {
 
     strong {
         color: #333;
