--- a/assets/sass/site/_type.scss
+++ b/assets/sass/site/_type.scss
@@ -4,18 +4,18 @@ h1, h2, h3, h4, h5, h6 {
     margin-bottom: 16px;
     line-height: 1.25;
     padding-bottom: 0.3em;
-    color: #333;
+    color: #495057;
 }
 
-.entry-title {
+.entry-title, .page-title {
     font-size: 2em;
     border-bottom: 1px solid #eaecef;
 }
 
-article.hentry {
+article.hentry, .entry-content {
 
     strong {
-        color: #333;
+        color: #495057;
     }
 
     strong, a {
