--- a/assets/sass/site/_site-content.scss
+++ b/assets/sass/site/_site-content.scss
@@ -2,6 +2,7 @@
     padding-top: 1.75em;
     padding-bottom: 4.5em;
     background-color: #fff;
+    border-left: 1px solid #f1f1f1;
 }
 
 .site-content {
@@ -33,6 +34,10 @@ hr {
 .entry-content {
     > *:first-child {
         margin-top: 0;
+    }
+
+    > *:last-child {
+        margin-bottom: 0;
     }
 
     img {
@@ -199,9 +204,81 @@ hr {
 .post-author {
     img {
         border-radius: 50%;
+        margin-right: 5px;
     }
 }
 
 .published:not(.updated) {
     display: none;
+}
+
+.comment-list {
+    @include list-unstyled();
+
+    li {
+        margin: 1.5em 0;
+        font-size: 14px;
+        line-height: 21px;
+    }
+
+    ol, ul {
+        @include list-unstyled();
+        padding-left: 30px;
+    }
+
+    .avatar {
+        border-radius: 50%;
+        margin-right: 5px;
+    }
+
+    .comment-meta {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 0.5em;
+        color: #9daab6;
+        align-items: center;
+
+        * {
+            margin-bottom: 0;
+        }
+
+        .comment-metadata a {
+            color: #9daab6
+        }
+
+        a {
+            color: darken( #9daab6, 20% );
+            font-weight: 500;
+        }
+    }
+
+    .comment-body {
+        position: relative;
+    }
+
+    .comment-content {
+        background-color: #f5f7f9;
+        padding: 1.5em;
+        color: #242a31;
+
+        > *:last-child {
+            margin-bottom: 0;
+        }
+    }
+
+    .reply {
+        font-size: 10px;
+        text-transform: uppercase;
+        font-weight: 500;
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        color: #9daab6;
+        line-height: 1;
+        padding: 5px 10px;
+
+        a {
+            color: #9daab6;
+        }
+    }
 }
