--- a/assets/sass/site/_type.scss
+++ b/assets/sass/site/_type.scss
@@ -7,12 +7,41 @@ h1, h2, h3, h4, h5, h6 {
     color: #495057;
 }
 
+h1, h2 {
+    border-bottom: 1px solid #eaecef;
+}
+
+h1 {
+    font-size: 2em;
+}
+
+h2 {
+    font-size: 1.5em;
+}
+
+h3 {
+    font-size: 1.25em;
+}
+
+h4 {
+    font-size: 1em;
+}
+
+h5 {
+    font-size: 0.875em;
+}
+
+h6 {
+    font-size: 0.85em;
+    color: #6a737d;
+}
+
 .entry-title, .page-title {
     font-size: 2em;
     border-bottom: 1px solid #eaecef;
 }
 
-article.hentry, .entry-content {
+.entry-content {
 
     strong {
         color: #495057;
@@ -21,33 +50,5 @@ article.hentry, .entry-content {
     strong, a {
         font-weight: 600;
     }
-
-    h1, h2 {
-        border-bottom: 1px solid #eaecef;
-    }
-
-    h1 {
-        font-size: 2em;
-    }
-    
-    h2 {
-        font-size: 1.5em;
-    }
-
-    h3 {
-        font-size: 1.25em;
-    }
-
-    h4 {
-        font-size: 1em;
-    }
-
-    h5 {
-        font-size: 0.875em;
-    }
-
-    h6 {
-        font-size: 0.85em;
-        color: #6a737d;
-    }
 }
+
