--- a/assets/sass/site/_site-content.scss
+++ b/assets/sass/site/_site-content.scss
@@ -156,6 +156,10 @@ hr {
     }
 }
 
+.wedocs-entry-footer a {
+    font-weight: 500;
+}
+
 .wedocs-doc-nav {
     display: flex;
     justify-content: space-between;
