--- a/assets/sass/site/_type.scss
+++ b/assets/sass/site/_type.scss
@@ -57,6 +57,7 @@ h6 {
 
             @include hover-focus() {
                 color: #007bff;
+                text-decoration: none;
             }
         }
     }
