--- a/assets/sass/site/_base.scss
+++ b/assets/sass/site/_base.scss
@@ -1,6 +1,7 @@
 body {
-    font-family: 'Montserrat', sans-serif;
+    font-family: proxima-nova, 'Montserrat', sans-serif;
     line-height: 1.75em;
+    -webkit-font-smoothing: antialiased;
 }
 
 img {
